--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 		<title>FAMA TRASPORTI</title>
         <link rel="stylesheet" type="text/css" href="../page.css" />
 	</head>
-	<body>
+	<body scroll="no">
             <div id="container" style="width:100%">
 
             <div id="header" style="background-color:#FFA500;width:70%;height:20%;float:left">
