--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 	<head>
 		<title>FAMA TRASPORTI</title>
         <link rel="stylesheet" type="text/css" href="../page.css" />
@@ -6,10 +6,10 @@
 	<body scroll="no">
             <div id="container" style="width:100%">
 
-            <div id="header" style="background-color:#FFA500;width:70%;height:20%;float:left">
+            <div id="header" style="background-color:#ABCDEF;width:70%;height:20%;float:left">
             <p><h1> FAMA TRASPORTI </h1></p>
 			<br/><br/></div>
-            <div id="login" style="background-color:#FFD700;width:30%;float:right;height:20%;"></div>
+            <div id="login" style="background-color:#ABCDEF;width:30%;float:right;height:20%;"></div>
 			<div id="content" style="background-color:#EEEEEE;height:80%;width:100%;float:left;">
             <p>
 				<b><a href=?ps=info></b>
@@ -23,12 +23,12 @@
 				<b><a href=mailto:segreteria.di@ateneo.univr.it> segreteria.di@ateneo.univr.it </a></b>
 	<br/><br/>
 			
-				<b><a href=?ps=did> Didattica erogata </a></b>
+				<b><a href=?ps=did> Orari </a></b>
 				<br/><br/>
 				<b><a href=?ps=mail> Iscrizione alla Mailing list </a></b>
 			</p></div>
-            <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
-            Copyright © W3Schools.com</div>
+            <div id="footer" style="background-color:#ABCDEF;clear:both;text-align:center;">
+            Copyright © FAMA Trasporti</div>
 		</body>
 
 </html>
